application/frontend/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: match-maker
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-maker
      type: frontend
  template:
    metadata:
      labels:
        app: match-maker
        type: frontend
    spec:
      containers:
        - image: ghcr.io/pm4fs25match-maker/match-maker-frontend:main
          imagePullPolicy: Always
          name: frontend
          ports:
            - name: http
              containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
