application/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: match-maker
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-maker
      type: frontend
  template:
    metadata:
      labels:
        app: match-maker
        type: frontend
    spec:
      containers:
        - image: ghcr.io/pm4fs25match-maker/match-maker-frontend:main
          imagePullPolicy: Always
          name: frontend
          ports:
            - name: http
              containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config
              subPath: default.conf
      volumes:
        - configMap:
            name: angular-nginx-config
          name: nginx-config
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
