application/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: match-maker
    type: frontend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
  type: ClusterIP
