application/frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: frontend
  namespace: meea-match-maker-testing
spec:
  ingressClassName: traefik
  rules:
  - host: mm.pm4.init-lab.ch
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
q        pathType: ImplementationSpecific
